need to add scrollbar and fix  remove fun

--- a/coffee.css
+++ b/coffee.css
@@ -6,11 +6,23 @@ html, body {
     background-size:100% 100%;
     background-repeat:no-repeat;
 }
+table{
+    margin: 0;
+}
+
 tbody{
     font-family: 'Italianno', cursive;
-    color: rgba(169, 169, 169, 0.705);
 }
 h1.text-center{
     font-family: 'Dancing Script', cursive;
     color:hwb(32 13% 32% / 0.74);
 }
+
+.coffee{
+    display: flex;
+    align-items: baseline;
+}
+.scrollable{
+    height: 600px; /* or any value */
+    overflow-y: scroll;
+} 
